--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ compile_commands.json
 # QtCreator local machine specific files for imported projects
 *creator.user*
 exec
+
+charger_manager
+*.h*
+*.idx
